test/functions/errors/unexpected_argument_type_3.dmd
function add(a: int64, b: int64): int64
    a + b

function add(a: int64, b: bool): bool
    a == 0 or b

function add2(a, b)
    return add(a, b)

print(add2(3, 3.5))

--- Output
Type mismatch

The type of the 2nd argument of 'add' doesn't match with what I expect.

8│     return add(a, b)

The type received is:

float64

But possible types are:

int64 or bool

Called from:
    test/functions/errors/unexpected_argument_type_3.dmd: 10| add2(a: int64, b: float64)

---